--- a/package.json
+++ b/package.json
@@ -6,16 +6,42 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "start": "ts-node src/index.ts",
-    "prod": "rm -rf dist/ && tsc --build --force && node dist/index.js"
+    "prod": "rm -rf dist/ && tsc --build --force && node dist/index.js",
+    "setup": "ts-node src/utils/init.ts",
+    "setup:sv": "ts-node src/utils/init-sv.ts",
+    "audio": "node src/speech.js"
   },
   "dependencies": {
     "@discordjs/opus": "^0.6.0",
+    "@discordjs/voice": "^0.7.5",
+    "@picovoice/porcupine-node": "^2.0.2",
+    "@solyarisoftware/voskjs": "^1.2.8",
+    "deepspeech": "^0.9.3",
     "discord-music-player": "^8.0.2",
     "discord.js": "^13.1.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "ffi-napi": "^4.0.3",
+    "node-crc": "^2.0.11",
+    "node-vad": "^1.1.4",
+    "nodejs-file-downloader": "^4.9.2",
+    "prism-media": "^2.0.0-alpha.0",
+    "ref-napi": "^3.0.3",
+    "tar": "^6.1.11",
+    "tar-fs": "^2.1.1",
+    "tar-js": "^0.3.0",
+    "vosk": "^0.3.32",
+    "vosk-js": "^0.3.0",
+    "wav": "^1.0.2",
+    "webrtcvad": "^1.0.1"
   },
   "devDependencies": {
+    "@types/ffi-napi": "^4.0.5",
     "@types/node": "^16.9.2",
+    "@types/ref-napi": "^3.0.4",
+    "@types/tar": "^6.1.1",
+    "@types/tar-fs": "^2.0.1",
+    "@types/tar-js": "^0.3.2",
+    "@types/wav": "^1.0.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
