--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": "."
+    "allowJs": true,
+    "baseUrl": ".",
+    "typeRoots": ["./src/@types/**/*.d.ts"],
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "src/speech.ts"]
 }
