--- a/package.json
+++ b/package.json
@@ -5,17 +5,15 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "start": "ts-node src/index.ts",
-    "prod": "rm -rf dist/ && tsc --build --force && node dist/index.js",
-    "setup": "ts-node src/utils/init.ts",
-    "setup:sv": "ts-node src/utils/init-sv.ts",
-    "audio": "node src/speech.js"
+    "start:dev": "ts-node src/index.ts",
+    "build": "rm -rf dist/ && tsc",
+    "start": "node dist/index.js",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@discordjs/opus": "^0.6.0",
     "@distube/spotify": "^1.1.0",
     "@mapbox/node-pre-gyp": "^1.0.1",
-    "discord-music-player": "^8.0.2",
     "discord.js": "^12.5.1",
     "distube": "^3.2.0",
     "dotenv": "^10.0.0",
